@@ -7,21 +7,22 @@ description = "gRPC: Jakarta Servlet"
 
 // Set up classpaths and source directories for different servlet tests
 sourceSets {
-    undertowTest {
-        java {
-            include '**/Undertow*.java'
-        }
-    }
-    tomcatTest {
-        java {
-            include '**/Tomcat*.java'
-        }
-    }
+
     // Only run these tests if java 11+ is being used
     if (JavaVersion.current().isJava11Compatible()) {
         jettyTest {
             java {
                 include '**/Jetty*.java'
+            }
+        }
+        tomcatTest {
+            java {
+                include '**/Tomcat*.java'
+            }
+        }
+        undertowTest {
+            java {
+                include '**/Undertow*.java'
             }
         }
     }
@@ -56,12 +57,11 @@ def migrate(String name, String inputDir, SourceSet sourceSet) {
 
 migrate('main', '../src/main/java', sourceSets.main)
 
-// Build the set of sourceSets and classpaths to modify, since Jetty 11 requires Java 11
-// and must be skipped
-migrate('undertowTest', '../src/undertowTest/java', sourceSets.undertowTest)
-migrate('tomcatTest', '../src/tomcatTest/java', sourceSets.tomcatTest)
+// Only build sourceSets and classpaths for tests if using Java 11
 if (JavaVersion.current().isJava11Compatible()) {
     migrate('jettyTest', '../src/jettyTest/java', sourceSets.jettyTest)
+    migrate('tomcatTest', '../src/tomcatTest/java', sourceSets.tomcatTest)
+    migrate('undertowTest', '../src/undertowTest/java', sourceSets.undertowTest)
 }
 
 // Disable checkstyle for this project, since it consists only of generated code
@@ -77,7 +77,7 @@ tasks.named("jar").configure {
 
 dependencies {
     api project(':grpc-api')
-    compileOnly 'jakarta.servlet:jakarta.servlet-api:5.0.0',
+    compileOnly libraries.jakarta.servlet.api,
             libraries.javax.annotation
 
     implementation project(':grpc-util'),
@@ -94,51 +94,46 @@ dependencies {
         exclude group: 'io.grpc', module: 'grpc-xds'
     }
 
-    tomcatTestImplementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.14'
+    tomcatTestImplementation libraries.tomcat.embed.core
 
-    jettyTestImplementation "org.eclipse.jetty:jetty-servlet:11.0.7",
-            "org.eclipse.jetty.http2:http2-server:11.0.7"
+    jettyTestImplementation libraries.jetty.servlet,
+            libraries.jetty.http2.server
 
-    undertowTestImplementation 'io.undertow:undertow-servlet-jakartaee9:2.2.13.Final'
+    undertowTestImplementation libraries.undertow.servlet
 }
 
 // Set up individual classpaths for each test, to avoid any mismatch,
 // and ensure they are only used when supported by the current jvm
-def undertowTest = tasks.register('undertowTest', Test) {
-    classpath = sourceSets.undertowTest.runtimeClasspath
-    testClassesDirs = sourceSets.undertowTest.output.classesDirs
-}
-def tomcat10Test = tasks.register('tomcat10Test', Test) {
-    classpath = sourceSets.tomcatTest.runtimeClasspath
-    testClassesDirs = sourceSets.tomcatTest.output.classesDirs
-
-    // Provide a temporary directory for tomcat to be deleted after test finishes
-    def tomcatTempDir = "$buildDir/tomcat_catalina_base"
-    systemProperty 'catalina.base', tomcatTempDir
-    doLast {
-        file(tomcatTempDir).deleteDir()
-    }
-
-    // tomcat-embed-core 10 presently performs illegal reflective access on
-    // java.io.ObjectStreamClass$Caches.localDescs and sun.rmi.transport.Target.ccl,
-    // see https://lists.apache.org/thread/s0xr7tk2kfkkxfjps9n7dhh4cypfdhyy
-    if (JavaVersion.current().isJava9Compatible()) {
-        jvmArgs += ['--add-opens=java.base/java.io=ALL-UNNAMED', '--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED']
-    }
-}
-
-tasks.named("check").configure {
-    dependsOn undertowTest, tomcat10Test
-}
-
-// Only run these tests if java 11+ is being used
 if (JavaVersion.current().isJava11Compatible()) {
     def jetty11Test = tasks.register('jetty11Test', Test) {
         classpath = sourceSets.jettyTest.runtimeClasspath
         testClassesDirs = sourceSets.jettyTest.output.classesDirs
     }
 
+    def tomcat10Test = tasks.register('tomcat10Test', Test) {
+        classpath = sourceSets.tomcatTest.runtimeClasspath
+        testClassesDirs = sourceSets.tomcatTest.output.classesDirs
+
+        // Provide a temporary directory for tomcat to be deleted after test finishes
+        def tomcatTempDir = "$buildDir/tomcat_catalina_base"
+        systemProperty 'catalina.base', tomcatTempDir
+        doLast {
+            file(tomcatTempDir).deleteDir()
+        }
+    }
+    tasks.named('compileTomcatTestJava') { JavaCompile task ->
+        task.options.release.set 11
+    }
+
+    def undertowTest = tasks.register('undertowTest', Test) {
+        classpath = sourceSets.undertowTest.runtimeClasspath
+        testClassesDirs = sourceSets.undertowTest.output.classesDirs
+    }
+    tasks.named('compileUndertowTestJava') { JavaCompile task ->
+        task.options.release.set 11
+    }
+
     tasks.named("check").configure {
-        dependsOn jetty11Test
+        dependsOn jetty11Test, tomcat10Test, undertowTest
     }
 }
